--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,25 +10,43 @@
     </head>
     <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand text-white" href="#">Book Store</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link text-white" href="#">Available Books</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">My Books</a>
                     </li>
                 </ul>
+                <div>
+                    <a class="nav-link text-white" href="#">New Book Register</a>
+                </div>
             </div>
         </div>
     </nav>
-
+        <div class="container text-center my-5">
+            <h1>WELCOME TO NEW BOOK STORE</h1>
+            <h6>
+                The sun dipped below the horizon, painting the sky in hues of orange and purple.
+                A gentle breeze rustled the leaves, carrying whispers of forgotten stories.
+                The city lights flickered to life, illuminating pathways of endless possibilities.
+                A stray cat wandered the alley, its emerald eyes gleaming with curiosity.
+                Distant laughter echoed through the streets, a melody of human connection.
+                Time marched forward, unnoticed yet relentless in its silent passage.
+                Somewhere, someone dreamed of adventures yet to unfold.
+            </h6>
+            <img src="images/bg.jpg" width="500px"/>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     </body>
